bugfix: modal on smaller screens.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 :root {
   --background-color: #ffc244;
   --action-color: #00a082;
